feat: init header layout

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -6,6 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="../assets/favicon.ico" />
         <title>트릭스터 M - 사전예약 진행 중</title>
+        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="header.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="header"></div>
+    </body>
 </html>
