feat: loading animation

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -11,13 +11,25 @@
         <link rel="stylesheet" href="header.css" />
     </head>
     <body>
+        <div class="curtain"></div>
         <div class="header">
-            <div class="hamberger"></div>
-            <div class="more-link">
-                <div class="button"></div>
-                <div class="button"></div>
-                <div class="button"></div>
+            <div class="hamberger">
+                <img class="button" src="../assets/icons/menu.png"></img>
             </div>
+            <div class="more-link">
+                <img class="button" src="../assets/icons/purple.png">
+                    <a href="https://www.ncpurple.com/intro/index?utm_source=tmeventpage&utm_medium=banner&utm_campaign=character&utm_content=basic_pc" ></a>
+                </img>
+                <img class="button" src="../assets/icons/share.png">
+                    <a href="#" ></a>
+                </img>
+                <img class="button" src="../assets/icons/home.png">
+                    <a href="https://tricksterm.plaync.com/board/all/list" ></a>
+                </img>
+            </div>
+        </div>
+        <div class="firstPage">
+            
         </div>
     </body>
 </html>
