--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -6,9 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="../assets/favicon.ico" />
         <title>트릭스터 M - 사전예약 진행 중</title>
-        <link rel="stylesheet" href="reset.css" />
-        <link rel="stylesheet" href="index.css" />
-        <link rel="stylesheet" href="header.css" />
+        <link rel="stylesheet" href="./css/reset.css" />
+        <link rel="stylesheet" href="./css/index.css" />
+        <link rel="stylesheet" href="./css/header.css" />
+        <link rel="stylesheet" href="./css/firstPage.css" />
     </head>
     <body>
         <div class="curtain"></div>
@@ -28,8 +29,7 @@
                 </img>
             </div>
         </div>
-        <div class="firstPage">
-            
-        </div>
+        <div class="first-page"></div>
+        
     </body>
 </html>
