feat: Add background

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -30,6 +30,8 @@
             </div>
         </div>
         <div class="first-page"></div>
+        <div class="first-page"></div>
+        <div class="first-page"></div>
         
     </body>
 </html>
