feat: Modify video play

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="../assets/favicon.ico" />
-        <title>트릭스터 M - 사전예약 진행 중</title>
-        <link rel="stylesheet" href="./css/reset.css" />
-        <link rel="stylesheet" href="./css/index.css" />
-        <link rel="stylesheet" href="./css/header.css" />
-        <link rel="stylesheet" href="./css/firstPage.css" />
-    </head>
-    <body>
-        <div class="curtain"></div>
-        <div class="header">
-            <div class="hamberger">
-                <img class="button" src="../assets/icons/menu.png"></img>
-            </div>
-            <div class="more-link">
-                <img class="button" src="../assets/icons/purple.png">
-                    <a href="https://www.ncpurple.com/intro/index?utm_source=tmeventpage&utm_medium=banner&utm_campaign=character&utm_content=basic_pc" ></a>
-                </img>
-                <img class="button" src="../assets/icons/share.png">
-                    <a href="#" ></a>
-                </img>
-                <img class="button" src="../assets/icons/home.png">
-                    <a href="https://tricksterm.plaync.com/board/all/list" ></a>
-                </img>
-            </div>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../assets/favicon.ico" />
+    <title>트릭스터 M - 사전예약 진행 중</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/firstPage.css" />
+    <link rel="stylesheet" href="./css/secondPage.css" />
+</head>
+
+<body>
+    <div class="curtain"></div>
+    <div class="header">
+        <div class="hamberger">
+            <img class="button" src="../assets/icons/menu.png"></img>
         </div>
-        <div class="first-page"></div>
-        <div class="first-page"></div>
-        <div class="first-page"></div>
-        
-    </body>
+        <div class="more-link">
+            <img class="button" src="../assets/icons/purple.png">
+            <a
+                href="https://www.ncpurple.com/intro/index?utm_source=tmeventpage&utm_medium=banner&utm_campaign=character&utm_content=basic_pc"></a>
+            </img>
+            <img class="button" src="../assets/icons/share.png">
+            <a href="#"></a>
+            </img>
+            <img class="button" src="../assets/icons/home.png">
+            <a href="https://tricksterm.plaync.com/board/all/list"></a>
+            </img>
+        </div>
+    </div>
+    <div class="first-page">
+        <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted autoplay=autoplay
+            style="width: 100%; height: auto;"></video>
+    </div>
+    <div class="second-page"></div>
+    <div class="first-page"></div>
+
+</body>
+
 </html>
