feat: Add scroll down

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/firstPage.css" />
     <link rel="stylesheet" href="./css/secondPage.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
 </head>
 
 <body>
@@ -39,7 +40,10 @@
     </div>
     <div class="second-page"></div>
     <div class="first-page"></div>
-
+    <div class="footer">
+        <img class="arrow" src="../assets/icons/scroll-down-arrow.png"></img>
+        <img class="text" src="../assets/icons/scroll-down-text.png"></img>
+    </div>
 </body>
 
 </html>
