feat: Modefy video size

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -35,8 +35,8 @@
         </div>
     </div>
     <div class="first-page">
-        <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted autoplay=autoplay
-            style="width: 100%; height: auto;"></video>
+        <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted
+            autoplay=autoplay></video>
     </div>
     <div class="second-page"></div>
     <div class="first-page"></div>
