feat: Add comment each component

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <div class="curtain"></div>
+    <!-- header -->
     <div class="header">
         <div class="hamberger">
             <img class="button" src="../assets/icons/menu.png"></img>
@@ -34,12 +35,15 @@
             </img>
         </div>
     </div>
+    <!-- pages -->
     <div class="first-page">
         <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted
             autoplay=autoplay></video>
     </div>
     <div class="second-page"></div>
     <div class="first-page"></div>
+
+    <!-- footer -->
     <div class="footer">
         <img class="arrow" src="../assets/icons/scroll-down-arrow.png"></img>
         <img class="text" src="../assets/icons/scroll-down-text.png"></img>
