feat: Init HTML/CSS arrow to JavaScript

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/firstPage.css" />
     <link rel="stylesheet" href="./css/secondPage.css" />
     <link rel="stylesheet" href="./css/footer.css" />
+    
 </head>
 
 <body>
@@ -25,29 +26,30 @@
         <div class="more-link">
             <img class="button" src="../assets/icons/purple.png">
             <a
-                href="https://www.ncpurple.com/intro/index?utm_source=tmeventpage&utm_medium=banner&utm_campaign=character&utm_content=basic_pc"></a>
-            </img>
-            <img class="button" src="../assets/icons/share.png">
+            href="https://www.ncpurple.com/intro/index?utm_source=tmeventpage&utm_medium=banner&utm_campaign=character&utm_content=basic_pc"></a>
+        </img>
+        <img class="button" src="../assets/icons/share.png">
             <a href="#"></a>
-            </img>
-            <img class="button" src="../assets/icons/home.png">
-            <a href="https://tricksterm.plaync.com/board/all/list"></a>
-            </img>
-        </div>
-    </div>
-    <!-- pages -->
-    <div class="first-page">
-        <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted
-            autoplay=autoplay></video>
-    </div>
-    <div class="second-page"></div>
-    <div class="first-page"></div>
+        </img>
+        <img class="button" src="../assets/icons/home.png">
+        <a href="https://tricksterm.plaync.com/board/all/list"></a>
+    </img>
+</div>
+</div>
+<!-- pages -->
+<div class="first-page">
+    <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted
+    autoplay=autoplay></video>
+</div>
+<div class="second-page"></div>
+<div class="first-page"></div>
 
-    <!-- footer -->
-    <div class="footer">
-        <img class="arrow" src="../assets/icons/scroll-down-arrow.png"></img>
-        <img class="text" src="../assets/icons/scroll-down-text.png"></img>
-    </div>
+<!-- footer -->
+<!-- <div class="footer">
+    <img class="arrow" src="../assets/icons/scroll-down-arrow.png"></img>
+    <img class="text" src="../assets/icons/scroll-down-text.png"></img>
+</div> -->
+<script src="./js/scroll.js"></script>
 </body>
 
 </html>
