feat: Add first page content

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -40,6 +40,16 @@
 <div class="first-page">
     <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted
     autoplay=autoplay></video>
+    <div class="content">
+        <div class="titleContainer">
+            <img class="description" src="../assets/firstPage/description.png" ></img>
+            <img id="title" src="../assets/firstPage/title.png"
+            ></img>
+        </div>
+        <div>
+            <img id="button" src="../assets/firstPage/button.png"></img>
+        </div>
+    </div>
 </div>
 <div class="second-page"></div>
 <div class="first-page"></div>
