feat: Add scroll pagenation

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/firstPage.css" />
     <link rel="stylesheet" href="./css/secondPage.css" />
     <link rel="stylesheet" href="./css/footer.css" />
-    
+
 </head>
 
 <body>
@@ -26,35 +26,34 @@
         <div class="more-link">
             <img class="button" src="../assets/icons/purple.png">
             <a
-            href="https://www.ncpurple.com/intro/index?utm_source=tmeventpage&utm_medium=banner&utm_campaign=character&utm_content=basic_pc"></a>
-        </img>
-        <img class="button" src="../assets/icons/share.png">
+                href="https://www.ncpurple.com/intro/index?utm_source=tmeventpage&utm_medium=banner&utm_campaign=character&utm_content=basic_pc"></a>
+            </img>
+            <img class="button" src="../assets/icons/share.png">
             <a href="#"></a>
-        </img>
-        <img class="button" src="../assets/icons/home.png">
-        <a href="https://tricksterm.plaync.com/board/all/list"></a>
-    </img>
-</div>
-</div>
-<!-- pages -->
-<div class="first-page">
-    <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted
-    autoplay=autoplay></video>
-    <div class="content">
-        <div class="titleContainer">
-            <img class="description" src="../assets/firstPage/description.png" ></img>
-            <img id="title" src="../assets/firstPage/title.png"
-            ></img>
-        </div>
-        <div>
-            <img id="button" src="../assets/firstPage/button.png"></img>
+            </img>
+            <img class="button" src="../assets/icons/home.png">
+            <a href="https://tricksterm.plaync.com/board/all/list"></a>
+            </img>
         </div>
     </div>
-</div>
-<div class="second-page"></div>
-<div class="first-page"></div>
+    <!-- pages -->
+    <div class="first-page">
+        <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted
+            autoplay=autoplay></video>
+        <div class="content">
+            <div class="titleContainer">
+                <img class="description" src="../assets/firstPage/description.png"></img>
+                <img id="title" src="../assets/firstPage/title.png"></img>
+            </div>
+            <div>
+                <img id="button" src="../assets/firstPage/button.png"></img>
+            </div>
+        </div>
+    </div>
+    <div class="second-page"></div>
+    <div class="first-page"></div>
 
-<script src="./js/scroll.js"></script>
+    <script src="./js/scroll.js"></script>
 </body>
 
 </html>
