feat: Complete arrow logic

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/pages.css" />
     <link rel="stylesheet" href="./css/firstPage.css" />
     <link rel="stylesheet" href="./css/secondPage.css" />
     <link rel="stylesheet" href="./css/footer.css" />
@@ -37,22 +38,23 @@
         </div>
     </div>
     <!-- pages -->
-    <div class="first-page">
-        <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted
-            autoplay=autoplay></video>
-        <div class="content">
-            <div class="titleContainer">
-                <img class="description" src="../assets/firstPage/description.png"></img>
-                <img id="title" src="../assets/firstPage/title.png"></img>
-            </div>
-            <div>
-                <img id="button" src="../assets/firstPage/button.png"></img>
+    <div class="pageContainer">
+        <div class="first-page">
+            <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted
+                autoplay=autoplay></video>
+            <div class="content">
+                <div class="titleContainer">
+                    <img class="description" src="../assets/firstPage/description.png"></img>
+                    <img id="title" src="../assets/firstPage/title.png"></img>
+                </div>
+                <div>
+                    <img id="button" src="../assets/firstPage/button.png"></img>
+                </div>
             </div>
         </div>
+        <div class="second-page"></div>
+        <div class="first-page"></div>
     </div>
-    <div class="second-page"></div>
-    <div class="first-page"></div>
-
     <script src="./js/scroll.js"></script>
 </body>
 
