style: complete scroll logic

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -53,7 +53,8 @@
             </div>
         </div>
         <div class="second-page"></div>
-        <div class="first-page"></div>
+        <div class="second-page"></div>
+        <div class="second-page"></div>
     </div>
     <script src="./js/scroll.js"></script>
 </body>
