feat: Add initial  animation logic

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -39,9 +39,20 @@
     </div>
     <!-- pages -->
     <div class="pageContainer">
-        <div class="first-page">
+        <div class="first-page section" id="page">
             <video src="https://vod.plaync.com/TricksterM/main/main_0217.mp4" playsinline loop muted
                 autoplay=autoplay></video>
+            <div class="content">
+                <div class="titleContainer">
+                    <img class="firstDescription" src="../assets/firstPage/description.png"></img>
+                    <img class="firstTitle" src="../assets/firstPage/title.png"></img>
+                </div>s
+                <div>
+                    <img class="firstButton" src="../assets/firstPage/button.png"></img>
+                </div>
+            </div>
+        </div>
+        <div class="second-page" id="page">
             <div class="content">
                 <div class="titleContainer">
                     <img class="description" src="../assets/firstPage/description.png"></img>
@@ -52,11 +63,13 @@
                 </div>
             </div>
         </div>
-        <div class="second-page"></div>
+        <!-- <div class="second-page"></div> -->
         <div class="second-page"></div>
         <div class="second-page"></div>
     </div>
     <script src="./js/scroll.js"></script>
+    <script src="./js/firstPage.js"></script>
+    <script src="./js/secondPage.js"></script>
 </body>
 
 </html>
