feat: Add second page title

--- a/younghyun/src/index.html
+++ b/younghyun/src/index.html
@@ -46,22 +46,19 @@
                 <div class="titleContainer">
                     <img class="firstDescription" src="../assets/firstPage/description.png"></img>
                     <img class="firstTitle" src="../assets/firstPage/title.png"></img>
-                </div>s
+                </div>
                 <div>
                     <img class="firstButton" src="../assets/firstPage/button.png"></img>
                 </div>
             </div>
         </div>
         <div class="second-page" id="page">
-            <div class="content">
-                <div class="titleContainer">
-                    <img class="description" src="../assets/firstPage/description.png"></img>
-                    <img id="title" src="../assets/firstPage/title.png"></img>
-                </div>
-                <div>
-                    <img id="button" src="../assets/firstPage/button.png"></img>
-                </div>
+            <div class="secondTitleContainer">
+                <div class="secondDescription"></div>
+                <div class="secondTitle"></div>
+                <div class="secondEffect"></div>
             </div>
+            <div class="secondMap"></div>
         </div>
         <!-- <div class="second-page"></div> -->
         <div class="second-page"></div>
@@ -70,6 +67,6 @@
     <script src="./js/scroll.js"></script>
     <script src="./js/firstPage.js"></script>
     <script src="./js/secondPage.js"></script>
-</body>
+</body>secondPage
 
 </html>
